Update tr51 for 13.1

--- a/tr51/tr51.html
+++ b/tr51/tr51.html
@@ -53,7 +53,7 @@
 		<table class="simple" width="90%">
 			<tr>
 				<td width="20%">Version</td>
-				<td>13.0</td> 
+				<td>13.<span class='changed'>1</span></td> 
 			</tr>
 			<tr>
 				<td>Editors</td>
@@ -61,7 +61,7 @@
 			</tr>
 			<tr>
 				<td>Date</td>
-				<td>2020-02-11</td>
+				<td>2020-<span class='changed'>09-01</span></td>
 			</tr>
 			<tr>
 				<td>This Version</td>
@@ -82,7 +82,7 @@
 			</tr>
 			<tr>
 				<td>Revision</td>
-				<td><a href="#Modifications">18</a></td>
+				<td class='changed'><a href="#Modifications">19</a></td>
 			</tr>
 		</table>
 		<p>&nbsp;</p>
@@ -175,7 +175,7 @@
 					  <li>Table: <a href="#ExplicitGenderApperance">Emoji
 						With Explicit Gender Appearance</a></li>
 					  <li>Table: <a href="#Emoji13NewGenderNeutral">Emoji
-						Changed to Gender-Neutral in Emoji 13.0</a></li>
+						Changed to Gender-Neutral in Emoji 13.0<span class='changed'>+</span></a></li>
 					  <li>2.3.1 <a href="#gender-neutral">Gender-Neutral Emoji</a></li>
 					  <li>2.3.2 <a href="#marking-gender-in-input">Marking Gender in Emoji Input</a></li>
 					</ul>
@@ -1423,8 +1423,7 @@
       </table>
 	  </div>
 		<p>The following table shows the corresponding Emoji version and
-		Unicode Standard version, up through Version 13.0,
-		including the labels used in data file comments.</p>
+	  Unicode Standard version, up through Version <span class='changed'>13.1</span>, including the labels used in data file comments.</p>
 		<p class="caption"><a name="EmojiVersions" href="#EmojiVersions">Emoji Versions</a></p>
 		<div align='center'>
 		<table class="subtle">
@@ -1507,6 +1506,12 @@
 			  <td>Unicode 13.0</td>
 			  <td>E13.0</td>
 			</tr>
+			<tr class='changed'>
+			  <td>Emoji 13.1</td>
+			  <td>2020-09-15</td>
+			  <td>Unicode 13.0</td>
+			  <td>E13.1</td>
+		    </tr>
 		  </tbody>
 		</table>
 		</div>
@@ -1713,7 +1718,7 @@
 			<tr><td>U+1F931</td><td>breast-feeding</td><td></td><td></td>
 			<tr><td>U+1F9D5</td><td>woman with headscarf<br>PERSON WITH HEADSCARF</td>
 				<td></td><td></td></tr>
-			<tr><td></td><td></td><td>U+1F9D4</td><td>man: beard<br>BEARDED PERSON</td></tr>
+			<tr class='removed'><td></td><td></td><td>U+1F9D4</td><td>man: beard<br>BEARDED PERSON</td></tr>
 			<tr>
 		   		<th colspan='4'>Explicit Gender Combination</th>
 			</tr>
@@ -1721,7 +1726,7 @@
 			</table>
 		</div>
 		<p>The emoji in the table <a href="#Emoji13NewGenderNeutral">Emoji
-			Changed to Gender-Neutral in Emoji 13.0</a> below have been removed from the
+			Changed to Gender-Neutral in Emoji 13.0<span class='changed'>+</span></a> below have been removed from the
 			table <a href="#ExplicitGenderApperance">Emoji With Explicit Gender Appearance</a>,
 			and the CLDR names for most have been changed to use <em>person</em> (along with
 			some other changes). The <em>person with veil</em> and <em>person in tuxedo</em>
@@ -1729,13 +1734,14 @@
 			<em>person in suit levitating</em> and <em>person with skullcap</em>, the visual
 			distinctions would be unclear at emoji sizes.</p>
 		<p class="caption"><a name="Emoji13NewGenderNeutral" href="#Emoji13NewGenderNeutral">Emoji
-			Changed to Gender-Neutral in Emoji 13.0</a></p>
+			Changed to Gender-Neutral in Emoji 13.0<span class='changed'>+</span></a></p>
 		<div align="center">
 		<table class="subtle">
 		  <tr>
-			<th colspan='2'>Gender-Neutral</th>
+			<th colspan='3'>Gender-Neutral</th>
 		  </tr>
 		  <tr>
+		    <td rowspan="4">E13.0</td>
 		    <td>U+1F470</td>
 		    <td>person with veil<br>
 			  BRIDE WITH VEIL</td>
@@ -1755,6 +1761,12 @@
             <td>person with skullcap<br>
               MAN WITH GUA PI MAO</td>
 		  </tr>
+          <tr class='changed'>
+            <td>E13.1</td>
+            <td>U+1F9D4</td>
+            <td>person: beard<br>
+            BEARDED PERSON</td>
+          </tr>
           </table>
 		</div>
 		<p>&nbsp;</p>
@@ -2558,9 +2570,9 @@
 			examples for some of these characters are illustrated in the following table.
 			This gives all of the people in the group the same skin tone, which is similar
 			to how the gender marker works.</p>
-		<p>However, in Emoji 12.0 through 13.0, such emoji modifier
-			sequences only have RGI status for three of the nine characters: woman and man
-			holding hands, men holding hands, and women holding hands.</p>
+		<p>However, in Emoji <span class='changed'>13.1</span>, such emoji modifier
+			sequences only have RGI status for <span class='changed'>five</span> of the nine characters: <em><span class='changed'>kiss, couple with heart,</span> woman and man
+			holding hands, men holding hands, </em>and<em> women holding hands</em>.</p>
 		<p class="caption"><a name="SkinTonesForGroupingsUsingCharacters" href="#SkinTonesForGroupingsUsingCharacters">Skin
 			Tones for Multi-Person Groupings Using Single Characters</a></p>
 		<div align='center'>
@@ -2792,7 +2804,7 @@
 			  	Modifiers</a></span>.</p>
 			<p>The <em>white square</em> emoji is often presented as a light gray, to set
 				it off from white backgrounds.</p>
-			<p>In Emoji Version 13.0 there is only one RGI emoji ZWJ sequence of this form.</p>
+			<p>In Emoji Version 13.<span class='changed'>1</span> there is only one RGI emoji ZWJ sequence of this form.</p>
 
         <h3>2.10 <a name="Direction" href="#Direction">Emoji Glyph Facing Direction</a></h3>
 		<p>Emoji with glyphs that face to the right or left may face either direction, according to
@@ -2856,7 +2868,7 @@
 	        </tr>
 	      </tbody>
 	  </table></div>
-	  <p>In Emoji Version 13.0 there are no RGI emoji ZWJ sequences of this form.</p>
+	  <p>In Emoji Version 13.<span class='changed'>1</span> there are no RGI emoji ZWJ sequences of this form.</p>
 	  <h3>2.11 <a name="composing_zwj_seq" href="#composing_zwj_seq">Order of Emoji ZWJ Sequences</a>
 		</h3>
 	    <p>When representing emoji ZWJ sequences for an individual person, the following order should be used:</p>
@@ -2913,8 +2925,8 @@
 		should support the characters and sequences listed in the [<a href="#emoji_data">emoji-data</a>]
 		data files. The best definition of the full set is in the emoji-test.txt file.</p>
 
-	  <p>The <a name="Emoji_Counts" href="http://www.unicode.org/emoji/charts-13.0/emoji-counts.html">Emoji
-		Counts, v13.0</a> chart provides more detail about the various counts as of
+	  <p>The <a class='changed' name="Emoji_Counts" href="http://www.unicode.org/emoji/charts-13.1/emoji-counts.html">Emoji
+		Counts, v13.1</a> chart provides more detail about the various counts as of
 		the current version of this specification. The various column
 		and row headers are described in
 		<a href="https://www.unicode.org/emoji/format.html#col-totals">Emoji Counts Key</a>.</p>
@@ -3234,8 +3246,8 @@
 				title="U+1F600 😀 grinning face">
 		</p>
 		<p>
-			The <a target='order'
-				href="https://www.unicode.org/emoji/charts-13.0/emoji-ordering.html">Emoji Ordering, v13.0</a>
+			The <a class='changed' target='order'
+				href="https://www.unicode.org/emoji/charts-13.1/emoji-ordering.html">Emoji Ordering, v13.1</a>
 			chart shows an ordering for emoji characters that groups them
 			together in a more natural fashion. This data has been incorporated
 			into [<a href="#CLDR">CLDR]</a>.
@@ -3611,11 +3623,11 @@
 	      idStatus=regular, deprecated, or macroregion. For macroregions,
 	      only <strong>UN</strong> and <strong>EU</strong> are valid.</li>
 	  </ul>
-		<p>Deprecated region
-				sequences should not be generated, but may be supported for backward
-				compatibility. Macroregion region
-			    sequences  generally do not have official flags, with the exception of
-			    <strong>UN</strong> and <strong>EU</strong>.</p>
+		<ol>
+		  <li><span class='changed'>Deprecated regions are included so that  deprecations in the future do not invalidate previously valid emoji flag sequences. Deprecated RGI emoji flag sequences are recommended for support, but other deprecated RGI emoji flag sequences</span> should not be generated.</li>
+		  <li>Macroregion region
+	      sequences  generally do not have official flags, with the exception of <strong>UN</strong> and <strong>EU</strong>.</li>
+      </ol>
 	  <p> Some region sequences represent countries (as recognized by the United
 		  Nations, for example); others represent territories that are
 		  associated with a country. Such territories may have flags of their own,
@@ -3756,7 +3768,7 @@
 	  </ol>
 		<p>Notes:</p>
 		<ol>
-		  <li>The deprecated SD values are only included for compatibility, and should not be used. They are included so that  deprecations in the future do not invalidate previously valid emoji tag sequences.</li>
+		  <li><span class='changed'>Deprecated SD values are included so that  deprecations in the future do not invalidate previously valid emoji tag sequences. Deprecated RGI emoji tag sequences are recommended for support, but other deprecated RGI emoji tag sequences</span> should not be generated. </li>
 		  <li>There is no hyphen in the <code>tag_spec</code>, unlike ISO subdivisions like &ldquo;GB-SCT&rdquo;.</li>
 		  <li>These flag emoji tag sequences are used to request an image for whatever is currently the flag of the specified subregion. Like the emoji flag sequences, they are not intended to provide a mechanism for <em>versioned</em> representations of any particular flag image.</li>
 		  <li>Specific platforms and programs decide which emoji extended flag sequences they will support. There is no requirement that any be supported, and no expectation that more than a small number be commonly supported by vendors.</li>
@@ -4075,8 +4087,8 @@
 					</td>
 					<td class="noborder" valign="top">The illustrative charts of
 						emoji.<br>
-						<em>For the 13.0 versions, see:</em><br>
-						<a href="http://www.unicode.org/emoji/charts-13.0/">http://unicode.org/emoji/charts-13.0/</a><br>
+						<em class='changed'>For the 13.1 versions, see:</em><br>
+						<a class='changed' href="http://www.unicode.org/emoji/charts-13.1/">http://unicode.org/emoji/charts-13.1/</a><br>
 					  <em>For the latest versions, see:</em><br>
                   <a href="http://www.unicode.org/emoji/charts/index.html">http://unicode.org/emoji/charts/</a></td>
 				</tr>
@@ -4085,12 +4097,12 @@
 						name="emoji_data" href="#emoji_data">emoji-data</a>]
 					</td>
 					<td valign="top">The associated data files for emoji characters.<br>
-					<em>For the 13.0 versions, see:</em><br>
+					<em class='changed'>For the 13.1 versions, see:</em><br>
 <a href="https://www.unicode.org/Public/13.0.0/ucd/emoji/emoji-data.txt">https://www.unicode.org/Public/13.0.0/ucd/emoji/emoji-data.txt</a><br>
 <a href="https://www.unicode.org/Public/13.0.0/ucd/emoji/emoji-variation-sequences.txt">https://www.unicode.org/Public/13.0.0/ucd/emoji/emoji-variation-sequences.txt</a><br>
-<a href="https://www.unicode.org/Public/emoji/13.0/emoji-sequences.txt">https://www.unicode.org/Public/emoji/13.0/emoji-sequences.txt</a><br>
-<a href="https://www.unicode.org/Public/emoji/13.0/emoji-zwj-sequences.txt">https://www.unicode.org/Public/emoji/13.0/emoji-zwj-sequences.txt</a><br>
-<a href="https://www.unicode.org/Public/emoji/13.0/emoji-test.txt">https://www.unicode.org/Public/emoji/13.0/emoji-test.txt</a><br>
+<a  class='changed'href="https://www.unicode.org/Public/emoji/13.1/emoji-sequences.txt">https://www.unicode.org/Public/emoji/13.1/emoji-sequences.txt</a><br>
+<a  class='changed'href="https://www.unicode.org/Public/emoji/13.1/emoji-zwj-sequences.txt">https://www.unicode.org/Public/emoji/13.1/emoji-zwj-sequences.txt</a><br>
+<a  class='changed'href="https://www.unicode.org/Public/emoji/13.1/emoji-test.txt">https://www.unicode.org/Public/emoji/13.1/emoji-test.txt</a><br>
 					<em>For the latest versions, see:</em><br>
 <a href="https://www.unicode.org/Public/UCD/latest/ucd/emoji/emoji-data.txt">https://www.unicode.org/Public/UCD/latest/ucd/emoji/emoji-data.txt</a><br>
 <a href="https://www.unicode.org/Public/UCD/latest/ucd/emoji/emoji-variation-sequences.txt">https://www.unicode.org/Public/UCD/latest/ucd/emoji/emoji-variation-sequences.txt</a><br>
@@ -4154,93 +4166,35 @@
 		</h2>
 		<p>The following summarizes modifications from the previous
 			revision of this document.</p>
-		<p><strong>Revision 18</strong></p>
-		<p><strong>Summary</strong>: Cleaned up definitions, regular expressions, and information
-		on versioning. Added definition of Emoji_Component, plus information about using ZWJ
-		sequences to change the color of base emoji. Four more characters are changed to
-		gender-neutral. Made a number of clarifications in wording.</p>
-        <ul>
-          <li><strong>Reissued</strong> for Version 13.0.</li>
-          <li >Renumbered old sections 2.8, 2.9, 2.10.</li>
-          <li ><a href="#Definitions">Section 1.4</a> Definitions
-            <ul>
-              <li>Added <em><strong><a href="#def_level2_emoji">ED-5</a>. </strong></em><strong>emoji component</strong>.</li>
-              <li>Clarified which characters and sequences are included in <em><strong><a href="#def_basic_emoji_set">ED-20</a>. </strong></em><strong>basic emoji set</strong>.</li>
-              <li><a href="#Emoji_Sets">Section 1.4.6 Emoji Sets</a>: Added prefix RGI to definitions and type_fields, where necessary.</li>
-              <li>Removed <em><strong><a href="#def_rgi_sequences">ED-26</a>. RGI sequence set</strong></em></li>
-            </ul>
-          </li>
-          <li ><a href="#Notation">Section 1.4.7 Notation</a>
-            <ul>
-              <li>Removed example of illustrative name for &lt;U+1F399 U+20E0&gt; <em>no microphones.</em></li>
-            </ul>
-          </li>
-          <li ><a  href="#EBNF_and_Regex">Section 1.4.9 EBNF and Regex</a> 
-            <ul>
-              <li>In EBNF, moved tag_modifier from possible_emoji to emoji_modification.</li>
-              <li>In generated regex, fixed typo (* vs +).</li>
-            </ul>
-          </li>
-          <li ><a  href="#Versioning">Section 1.5.2 Versioning</a> 
-            <ul>
-              <li>Added information on version notation in data file comments, and updated the table through Emoji 13.0</li>
-            </ul>
-          </li>
-          <li ><a  href="#Gender">Section 2.3 Gender</a> 
-            <ul>
-              <li>Four characters are being made gender-neutral, and thus removed from the explicit gender table.</li>
-            </ul>
-          </li>
-          <li ><a  href="#gender-neutral">Section 2.3.1 Gender-Neutral Emoji</a> 
-            <ul>
-              <li>Updated the text to reflect current vendor presentation of gender-neutral emoji.</li>
-            </ul>
-          </li>
-          <li ><a  href="#Multi_Person_Groupings">Section 2.6 Multi-Person Groupings</a> 
-            <ul>
-              <li>Updated the list of emoji for which the infant should be depicted with no skin tone showing.</li>
-            </ul>
-          </li>
-          <li><a 
-			href="#multiperson_skintones">Section 2.6.2 Multi-Person Skin Tones</a>
-            <ul>
-              <li>For the multi-person emoji, implementations do not have to have different images depending on position. </li>
-            </ul>
-          </li>
-          <li><a href="#color">Section 2.9 Color</a>
-            <ul>
-              <li>Inserted new section on how to use ZWJ sequences to change the color of base emoji, to represent such emoji as  <em>black cat</em>.</li>
-            </ul>
-          </li>
-          <li><a href="#Direction">Section 2.10 Emoji Glyph Facing Direction</a>
-            <ul>
-              <li>Clarified behavior for fallback and redundant situations, and noted that
-              	there are currently no RGI sequences using this mechanism.</li>
-            </ul>
-          </li>
-          <li><a href="#composing_zwj_seq">Section 2.11 Order of Emoji ZWJ Sequences</a>
-            <ul>
-              <li>Added ordering for Color information.</li>
-            </ul>
-          </li>
-          <li><a href="#Emoji_Properties_and_Data_Files">Annex A: Emoji Properties and Data Files</a>
-            <ul>
-              <li>Clarified that Emoji_Component are used in emoji sequences.</li>
-              <li>In A.1, noted that data file comments and their structure is purely informative, and may change across releases without notice.</li>
-            </ul>
-          </li>
-          <li><a href="#valid-emoji-tag-sequences">Annex C: Valid Emoji Tag Sequences</a>
-            <ul>
-              <li>Explained when to use a <em>missing emoji glyph</em> for tag sequences.</li>
-            </ul>
-          </li>
-          <li><a href='#References'>References</a> 
-            <ul>
-              <li>Some of the [<a href="#emoji_data">emoji-data</a>] files (emoji-data.txt,
-           		emoji-variation-sequences.txt) are moved to a new location (in the UCD).</li>
-            </ul>
-          </li>
-        </ul>
+		<p><strong class='changed'>Revision 19</strong></p>
+		<p class='changed'><strong>Summary</strong>: Minor changes for version 13.1          </p>
+		<ul class='changed'>
+		  <li><em>Section 1.5.2 <a href="#Versioning">Versioning</a></em>
+		    <ul>
+		      <li>Added version 13.1</li>
+	        </ul>
+		  </li>
+		  <li>Section 2.3 <a href="#Gender">Gender</a>
+		    <ul>
+		      <li>Changed BEARDED PERSON to be gender-neutral</li>
+	        </ul>
+		  </li>
+		  <li><em>Section 2.6.2 <a href="#multiperson_skintones">Multi-Person Skin Tones</a></em>
+		    <ul>
+		      <li>Added <em>kiss, couple with heart</em> to those with RGI skin tones.</li>
+	        </ul>
+		  </li>
+		  <li>Annex C: <a href="#valid-emoji-tag-sequences">Valid Emoji Tag Sequences</a>
+		    <ul>
+		      <li>Clarified use of deprecated emoji flag sequences and emoji tag sequences.</li>
+	        </ul>
+		  </li>
+		  <li><a href="#References">References</a>
+		    <ul>
+		      <li>Changes file versions for version 13.1.</li>
+	        </ul>
+		  </li>
+	  </ul>
 		<p>Modifications for prior versions can be found in
 	  those prior versions.</p>
 		<hr width="50%">
