Removed yellow and bumped date for release of Revison 19, Emoji 13.1. Tweaks in a couple of places in Annexes / Notes.

--- a/tr51/tr51.html
+++ b/tr51/tr51.html
@@ -53,7 +53,7 @@
 		<table class="simple" width="90%">
 			<tr>
 				<td width="20%">Version</td>
-				<td>13.<span class='changed'>1</span></td> 
+				<td>13.1</td> 
 			</tr>
 			<tr>
 				<td>Editors</td>
@@ -61,15 +61,15 @@
 			</tr>
 			<tr>
 				<td>Date</td>
-				<td>2020-<span class='changed'>09-12</span></td>
+				<td>2020-09-18</td>
 			</tr>
 			<tr>
 				<td>This Version</td>
-				<td><a href="http://www.unicode.org/reports/tr51/tr51-18.html">http://www.unicode.org/reports/tr51/tr51-18.html</a></td>
+				<td><a href="http://www.unicode.org/reports/tr51/tr51-19.html">http://www.unicode.org/reports/tr51/tr51-19.html</a></td>
 			</tr>
 			<tr>
 				<td>Previous Version</td>
-				<td><a href="http://www.unicode.org/reports/tr51/tr51-16.html">http://www.unicode.org/reports/tr51/tr51-16.html</a></td>
+				<td><a href="http://www.unicode.org/reports/tr51/tr51-18.html">http://www.unicode.org/reports/tr51/tr51-18.html</a></td>
 			</tr>
 			<tr>
 				<td>Latest Version</td>
@@ -82,7 +82,7 @@
 			</tr>
 			<tr>
 				<td>Revision</td>
-				<td class='changed'><a href="#Modifications">19</a></td>
+				<td><a href="#Modifications">19</a></td>
 			</tr>
 		</table>
 		<p>&nbsp;</p>
@@ -175,7 +175,7 @@
 					  <li>Table: <a href="#ExplicitGenderApperance">Emoji
 						With Explicit Gender Appearance</a></li>
 					  <li>Table: <a href="#Emoji13NewGenderNeutral">Emoji
-						Changed to Gender-Neutral in Emoji 13.0<span class='changed'>+</span></a></li>
+						Changed to Gender-Neutral in Emoji 13.0+</a></li>
 					  <li>2.3.1 <a href="#gender-neutral">Gender-Neutral Emoji</a></li>
 					  <li>2.3.2 <a href="#marking-gender-in-input">Marking Gender in Emoji Input</a></li>
 					</ul>
@@ -1423,7 +1423,7 @@
       </table>
 	  </div>
 		<p>The following table shows the corresponding Emoji version and
-	  Unicode Standard version, up through Version <span class='changed'>13.1</span>, including the labels used in data file comments.</p>
+	  Unicode Standard version, up through Version 13.1, including the labels used in data file comments.</p>
 		<p class="caption"><a name="EmojiVersions" href="#EmojiVersions">Emoji Versions</a></p>
 		<div align='center'>
 		<table class="subtle">
@@ -1506,7 +1506,7 @@
 			  <td>Unicode 13.0</td>
 			  <td>E13.0</td>
 			</tr>
-			<tr class='changed'>
+			<tr>
 			  <td>Emoji 13.1</td>
 			  <td>2020-09-15</td>
 			  <td>Unicode 13.0</td>
@@ -1718,7 +1718,6 @@
 			<tr><td>U+1F931</td><td>breast-feeding</td><td></td><td></td>
 			<tr><td>U+1F9D5</td><td>woman with headscarf<br>PERSON WITH HEADSCARF</td>
 				<td></td><td></td></tr>
-			<tr class='removed'><td></td><td></td><td>U+1F9D4</td><td>man: beard<br>BEARDED PERSON</td></tr>
 			<tr>
 		   		<th colspan='4'>Explicit Gender Combination</th>
 			</tr>
@@ -1726,7 +1725,7 @@
 			</table>
 		</div>
 		<p>The emoji in the table <a href="#Emoji13NewGenderNeutral">Emoji
-			Changed to Gender-Neutral in Emoji 13.0<span class='changed'>+</span></a> below have been removed from the
+			Changed to Gender-Neutral in Emoji 13.0+</a> below have been removed from the
 			table <a href="#ExplicitGenderApperance">Emoji With Explicit Gender Appearance</a>,
 			and the CLDR names for most have been changed to use <em>person</em> (along with
 			some other changes). The <em>person with veil</em> and <em>person in tuxedo</em>
@@ -1734,7 +1733,7 @@
 			<em>person in suit levitating</em> and <em>person with skullcap</em>, the visual
 			distinctions would be unclear at emoji sizes.</p>
 		<p class="caption"><a name="Emoji13NewGenderNeutral" href="#Emoji13NewGenderNeutral">Emoji
-			Changed to Gender-Neutral in Emoji 13.0<span class='changed'>+</span></a></p>
+			Changed to Gender-Neutral in Emoji 13.0+</a></p>
 		<div align="center">
 		<table class="subtle">
 		  <tr>
@@ -1761,7 +1760,7 @@
             <td>person with skullcap<br>
               MAN WITH GUA PI MAO</td>
 		  </tr>
-          <tr class='changed'>
+          <tr>
             <td>E13.1</td>
             <td>U+1F9D4</td>
             <td>person: beard<br>
@@ -2570,8 +2569,8 @@
 			examples for some of these characters are illustrated in the following table.
 			This gives all of the people in the group the same skin tone, which is similar
 			to how the gender marker works.</p>
-		<p>However, in Emoji <span class='changed'>13.1</span>, such emoji modifier
-			sequences only have RGI status for <span class='changed'>five</span> of the nine characters: <em><span class='changed'>kiss, couple with heart,</span> woman and man
+		<p>However, in Emoji 13.1, such emoji modifier
+			sequences only have RGI status for five of the nine characters: <em>kiss, couple with heart, woman and man
 			holding hands, men holding hands, </em>and<em> women holding hands</em>.</p>
 		<p class="caption"><a name="SkinTonesForGroupingsUsingCharacters" href="#SkinTonesForGroupingsUsingCharacters">Skin
 			Tones for Multi-Person Groupings Using Single Characters</a></p>
@@ -2804,7 +2803,7 @@
 			  	Modifiers</a></span>.</p>
 			<p>The <em>white square</em> emoji is often presented as a light gray, to set
 				it off from white backgrounds.</p>
-			<p>In Emoji Version 13.<span class='changed'>1</span> there is only one RGI emoji ZWJ sequence of this form.</p>
+			<p>In Emoji Version 13.1 there is only one RGI emoji ZWJ sequence of this form.</p>
 
         <h3>2.10 <a name="Direction" href="#Direction">Emoji Glyph Facing Direction</a></h3>
 		<p>Emoji with glyphs that face to the right or left may face either direction, according to
@@ -2868,7 +2867,7 @@
 	        </tr>
 	      </tbody>
 	  </table></div>
-	  <p>In Emoji Version 13.<span class='changed'>1</span> there are no RGI emoji ZWJ sequences of this form.</p>
+	  <p>In Emoji Version 13.1 there are no RGI emoji ZWJ sequences of this form.</p>
 	  <h3>2.11 <a name="composing_zwj_seq" href="#composing_zwj_seq">Order of Emoji ZWJ Sequences</a>
 		</h3>
 	    <p>When representing emoji ZWJ sequences for an individual person, the following order should be used:</p>
@@ -2925,7 +2924,7 @@
 		should support the characters and sequences listed in the [<a href="#emoji_data">emoji-data</a>]
 		data files. The best definition of the full set is in the emoji-test.txt file.</p>
 
-	  <p>The <a class='changed' name="Emoji_Counts" href="http://www.unicode.org/emoji/charts-13.1/emoji-counts.html">Emoji
+	  <p>The <a name="Emoji_Counts" href="http://www.unicode.org/emoji/charts-13.1/emoji-counts.html">Emoji
 		Counts, v13.1</a> chart provides more detail about the various counts as of
 		the current version of this specification. The various column
 		and row headers are described in
@@ -3246,7 +3245,7 @@
 				title="U+1F600 😀 grinning face">
 		</p>
 		<p>
-			The <a class='changed' target='order'
+			The <a target='order'
 				href="https://www.unicode.org/emoji/charts-13.1/emoji-ordering.html">Emoji Ordering, v13.1</a>
 			chart shows an ordering for emoji characters that groups them
 			together in a more natural fashion. This data has been incorporated
@@ -3624,7 +3623,10 @@
 	      only <strong>UN</strong> and <strong>EU</strong> are valid.
 	  
 		<ol>
-		  <li><span class='changed'>Deprecated regions are included so that  deprecations in the future do not invalidate previously valid emoji flag sequences. RGI emoji flag sequences with deprecated regions are recommended for support, but other  RGI emoji flag sequences with deprecated regions</span> should not be generated.</li>
+		  <li>Deprecated regions are included in the list of valid region 
+		  sequences so that  deprecations in the future do not invalidate previously valid emoji flag sequences. RGI emoji flag sequences with deprecated regions are recommended for support. 
+		  Non-RGI emoji flag sequences with deprecated regions should not be 
+		  generated.</li>
 		  <li>Macroregion region
 	      sequences  generally do not have official flags, with the exception of <strong>UN</strong> and <strong>EU</strong>.</li>
       </ol></li>
@@ -3769,7 +3771,9 @@
 	  </ol>
 		<p>Notes:</p>
 		<ol>
-		  <li><span class='changed'>Deprecated SD values are included so that  deprecations in the future do not invalidate previously valid emoji tag sequences. RGI emoji tag sequences with deprecated SD values are recommended for support, but other  RGI emoji tag sequences with deprecated SD values</span> should not be generated. </li>
+		  <li>Deprecated SD values are included in the list of valid region 
+		  sequences so that deprecations in the future do not invalidate previously valid emoji tag sequences. RGI emoji tag sequences with deprecated SD values are recommended for support. 
+		  Non-RGI emoji tag sequences with deprecated SD values should not be generated.</li>
 		  <li>There is no hyphen in the <code>tag_spec</code>, unlike ISO subdivisions like &ldquo;GB-SCT&rdquo;.</li>
 		  <li>These flag emoji tag sequences are used to request an image for whatever is currently the flag of the specified subregion. Like the emoji flag sequences, they are not intended to provide a mechanism for <em>versioned</em> representations of any particular flag image.</li>
 		  <li>Specific platforms and programs decide which emoji extended flag sequences they will support. There is no requirement that any be supported, and no expectation that more than a small number be commonly supported by vendors.</li>
@@ -4088,8 +4092,8 @@
 					</td>
 					<td class="noborder" valign="top">The illustrative charts of
 						emoji.<br>
-						<em class='changed'>For the 13.1 versions, see:</em><br>
-						<a class='changed' href="http://www.unicode.org/emoji/charts-13.1/">http://unicode.org/emoji/charts-13.1/</a><br>
+						<em>For the 13.1 versions, see:</em><br>
+						<a href="http://www.unicode.org/emoji/charts-13.1/">http://unicode.org/emoji/charts-13.1/</a><br>
 					  <em>For the latest versions, see:</em><br>
                   <a href="http://www.unicode.org/emoji/charts/index.html">http://unicode.org/emoji/charts/</a></td>
 				</tr>
@@ -4098,12 +4102,12 @@
 						name="emoji_data" href="#emoji_data">emoji-data</a>]
 					</td>
 					<td valign="top">The associated data files for emoji characters.<br>
-					<em class='changed'>For the 13.1 versions, see:</em><br>
+					<em>For the 13.1 versions, see:</em><br>
 <a href="https://www.unicode.org/Public/13.0.0/ucd/emoji/emoji-data.txt">https://www.unicode.org/Public/13.0.0/ucd/emoji/emoji-data.txt</a><br>
 <a href="https://www.unicode.org/Public/13.0.0/ucd/emoji/emoji-variation-sequences.txt">https://www.unicode.org/Public/13.0.0/ucd/emoji/emoji-variation-sequences.txt</a><br>
-<a  class='changed'href="https://www.unicode.org/Public/emoji/13.1/emoji-sequences.txt">https://www.unicode.org/Public/emoji/13.1/emoji-sequences.txt</a><br>
-<a  class='changed'href="https://www.unicode.org/Public/emoji/13.1/emoji-zwj-sequences.txt">https://www.unicode.org/Public/emoji/13.1/emoji-zwj-sequences.txt</a><br>
-<a  class='changed'href="https://www.unicode.org/Public/emoji/13.1/emoji-test.txt">https://www.unicode.org/Public/emoji/13.1/emoji-test.txt</a><br>
+<a href="https://www.unicode.org/Public/emoji/13.1/emoji-sequences.txt">https://www.unicode.org/Public/emoji/13.1/emoji-sequences.txt</a><br>
+<a href="https://www.unicode.org/Public/emoji/13.1/emoji-zwj-sequences.txt">https://www.unicode.org/Public/emoji/13.1/emoji-zwj-sequences.txt</a><br>
+<a href="https://www.unicode.org/Public/emoji/13.1/emoji-test.txt">https://www.unicode.org/Public/emoji/13.1/emoji-test.txt</a><br>
 					<em>For the latest versions, see:</em><br>
 <a href="https://www.unicode.org/Public/UCD/latest/ucd/emoji/emoji-data.txt">https://www.unicode.org/Public/UCD/latest/ucd/emoji/emoji-data.txt</a><br>
 <a href="https://www.unicode.org/Public/UCD/latest/ucd/emoji/emoji-variation-sequences.txt">https://www.unicode.org/Public/UCD/latest/ucd/emoji/emoji-variation-sequences.txt</a><br>
@@ -4167,9 +4171,9 @@
 		</h2>
 		<p>The following summarizes modifications from the previous
 			revision of this document.</p>
-		<p><strong class='changed'>Revision 19</strong></p>
-		<p class='changed'><strong>Summary</strong>: Minor changes for version 13.1          </p>
-		<ul class='changed'>
+		<p><strong>Revision 19</strong></p>
+		<p><strong>Summary</strong>: Minor changes for version 13.1          </p>
+		<ul>
 		  <li><em>Section 1.5.2 <a href="#Versioning">Versioning</a></em>
 		    <ul>
 		      <li>Added version 13.1</li>
